--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <article>
 
 
-<div title>
-	<div style="display:inline-block;">
-		<img class="logo" src="anaglyph.png" style="width:200px;">
-	</div>
+<!-- <div title> -->
+	<!-- <div style="display:inline-block;"> -->
+		<!-- <img class="logo" src="anaglyph.png" style="width:200px;"> -->
+	<!-- </div> -->
 
-	<div style="display:inline-block;">
-		<h1>Anaglyph</h1>
-	</div>
-</div>
+	<!-- <div style="display:inline-block;"> -->
+		<!-- <h1>Anaglyph</h1> -->
+	<!-- </div> -->
+<!-- </div> -->
 
 <div class="webvid">
 	<iframe src="https://player.vimeo.com/video/936885909?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
@@ -38,6 +38,7 @@ Only compatible with the Quest 3 headset</p>
 <h2><a href="https://www.meta.com/s/3wvpxEeTo" target="_blank">
 	Help us test it >>>
 </a></h2>
+
 
 <br><br>
 
