--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@ Only compatible with the Quest 3 headset</p>
 
 <br><br>
 
-<h3>We are (in no particular order)</h3>
+<p>We aren't a startup don't worry. Just some friends making fun stuff and we thought 
+"hey instead of rewriting all of this material to put on our own sites lets just get one together."
+This page is pretty bare but we're going to personalize it more later :)</p>
+
 <ul>
 	<li><a href="https://trev3d.com" target="_blank">
 		trev3d - programmer and artist
@@ -55,10 +58,6 @@ Only compatible with the Quest 3 headset</p>
 	<li>
 		Neto - concept artist
 </ul>
-
-<br>
-
-<p> This page is a work-in-progress. We'll flesh it out later :)</p>
 
 </article>
 
