--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Only compatible with the Quest 3 headset</p>
 
 <br><br>
 
-<p>We aren't a startup don't worry. Just some friends making fun stuff and we thought 
+<p>Don't worry, we aren't a startup or anything. We're just some friends making fun stuff and we thought 
 "hey instead of rewriting all of this material to put on our own sites lets just get one together."
 This page is pretty bare but we're going to personalize it more later :)</p>
 
