--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Only compatible with the Quest 3 headset</p>
 
 <br><br>
 
-<p>Don't worry, we aren't a startup or anything. We're just some friends making fun stuff and we thought 
-"hey instead of rewriting all of this material to put on our own sites lets just get one together."
-This page is pretty bare but we're going to personalize it more later :)</p>
+<p>Don't worry, we aren't a startup or anything. 
+This is a portfolio site for some friends making stuff together.
+It's pretty bare but we're going to personalize it more later :)</p>
 
 <ul>
 	<li><a href="https://trev3d.com" target="_blank">
