--- a/index.html
+++ b/index.html
@@ -13,46 +13,43 @@
 <article>
 
 
-<!-- <div title> -->
-	<!-- <div style="display:inline-block;"> -->
-		<!-- <img class="logo" src="anaglyph.png" style="width:200px;"> -->
-	<!-- </div> -->
+<div title>
+		<img class="logo" src="anaglyph.png" style="width:100px;">
 
-	<!-- <div style="display:inline-block;"> -->
-		<!-- <h1>Anaglyph</h1> -->
-	<!-- </div> -->
-<!-- </div> -->
+	<div style="display:inline-block;">
+		<h1 style="margin:0;">Anaglyph</h1>
+	</div>
+</div>
 
 <div class="webvid">
-	<iframe src="https://player.vimeo.com/video/936885909?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+	<iframe src="https://player.vimeo.com/video/1050839856?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 	allow="autoplay; fullscreen; picture-in-picture" 
 	style = "height:100%;"allowfullscreen></iframe>
 </div>
 
-<h2>We're currently making 'Lasertag'</h2>
+<h2>We're currently making <i>Lasertag</i></h2>
 
-<p><b>Lasertag</b> turns any space into a laser tag arena for you and your friends. 
-It's an experimental multiplayer mixed-reality game for people in the same physical space. 
-Only compatible with the Quest 3 headset</p>
+<p><b>Lasertag</b> turns any space into a laser tag arena with the press of a button. 
+It's an experimental multiplayer mixed-reality game for people in the same physical space.
+</p>
 
-<h2><a href="https://www.meta.com/s/3wvpxEeTo" target="_blank">
-	Help us test it >>>
+<h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
+	Help us test it ➔
 </a></h2>
 
 
 <br><br>
 
-<p>Don't worry, we aren't a startup or anything. 
-This is a portfolio site for some friends making stuff together.
+<p>This is a portfolio site for some friends making stuff together.
 It's pretty bare but we're going to personalize it more later :)</p>
 
 <ul>
 	<li><a href="https://trev3d.com" target="_blank">
-		trev3d - programmer and artist
+		trev3d ➔ programmer and artist
 	</a>
 	
 	<li><a href="https://fizzyapple12.com/" target=_blank">
-		FizzyApple12 - programmer and graphic designer
+		FizzyApple12 ➔ programmer and graphic designer
 	</a>
 	
 	<li>
