--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<article>
+<main>
 
 
 <div title>
@@ -29,19 +29,25 @@
 
 <h2>We're currently making <i>Lasertag</i></h2>
 
-<p><b>Lasertag</b> turns any space into a laser tag arena with the press of a button. 
-It's an experimental multiplayer mixed-reality game for people in the same physical space.
-</p>
+<p><b>Lasertag</b> (one word) turns any space into a laser tag arena 
+with a few Meta Quests and the press of a button. 
+It's an experimental multiplayer mixed-reality FPS that 'just works.'
+
+<p>Right now we're focusing on core features, so the game is pretty bare bones. 
+There also may be bugs.
+We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
 
 <h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-	Help us test it ➔
-</a></h2>
+Try the beta ➔</a></h2>
+
+<p><h3><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
+Join our Discord ➔</a></h3>
 
 
-<br><br>
+<br><br><br><h2>About</h2>
 
 <p>This is a portfolio site for some friends making stuff together.
-It's pretty bare but we're going to personalize it more later :)</p>
+<br>It's pretty bare but we're going to personalize it more later :)
 
 <ul>
 	<li><a href="https://trev3d.com" target="_blank">
@@ -56,7 +62,7 @@ It's pretty bare but we're going to personalize it more later :)</p>
 		Neto - concept artist
 </ul>
 
-</article>
+</main>
 
 
 </body>
