--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<article>
+<main>
 
 <h1>Privacy Policy for Lasertag</h1>
 <h3>tl;dr, we don't collect any information. Meta does.</h3>
@@ -37,7 +37,7 @@ We don't handle or have access to that data.</p>
 <h2>Contact</h2>
 <p>You can reach out to triveri@outlook.com if you have any questions</p>
 
-</article>
+</main>
 
 
 </body>
