--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <main>
 
 
-<div title>
-		<img class="logo" src="anaglyph.png" style="width:100px;">
+<!-- <div title> -->
+		<!-- <img class="logo" src="anaglyph.png" style="width:100px;"> -->
 
-	<div style="display:inline-block;">
-		<h1 style="margin:0;">Anaglyph</h1>
-	</div>
-</div>
+	<!-- <div style="display:inline-block;"> -->
+		<!-- <h1 style="margin:0;">Anaglyph</h1> -->
+	<!-- </div> -->
+<!-- </div> -->
 
 <div class="webvid">
 	<iframe src="https://player.vimeo.com/video/1050839856?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
@@ -42,6 +42,8 @@ Try the beta ➔</a></h2>
 
 <p><h3><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
 Join our Discord ➔</a></h3>
+<p><h3><a href="https://github.com/anaglyphs/lasertag" target="_blank">
+GitHub repo ➔</a></h3>
 
 
 <br><br><br><h2>About</h2>
