--- a/index.html
+++ b/index.html
@@ -46,22 +46,19 @@ Join our Discord ➔</a></h3>
 GitHub repo ➔</a></h3>
 
 
-<br><br><br><h2>About</h2>
+<br><br><br>
 
+
+<h2>About</h2>
 <p>This is a portfolio site for some friends making stuff together.
-<br>It's pretty bare but we're going to personalize it more later :)
-
 <ul>
-	<li><a href="https://trev3d.com" target="_blank">
-		trev3d ➔ programmer and artist
-	</a>
+	<li>Neto.blaster - concept artist
 	
-	<li><a href="https://fizzyapple12.com/" target=_blank">
-		FizzyApple12 ➔ programmer and graphic designer
-	</a>
-	
-	<li>
-		Neto - concept artist
+	<li><a href="https://fizzyapple12.com/" target="_blank">
+	FizzyApple12 ➔</a> programmer and graphic designer
+		
+	<li><a href="https://trev3d.com/" target="_blank">
+	trev3d ➔</a> programmer and artist
 </ul>
 
 </main>
