--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@ with a few Meta Quests and the press of a button.
 It's an experimental multiplayer mixed-reality FPS that 'just works.'
 
 <p>Right now we're focusing on core features, so the game is pretty bare bones. 
-There also may be bugs.
-We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
+There are also many bugs.
+
+<p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
 
 <h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
 Try the beta ➔</a></h2>
