--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- </div> -->
 <!-- </div> -->
 
-<div class="webvid">
+<div class="webvid" style="aspect-ratio:1.4222;">
 	<iframe src="https://player.vimeo.com/video/1050839856?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 	allow="autoplay; fullscreen; picture-in-picture" 
 	style = "height:100%;"allowfullscreen></iframe>
@@ -47,20 +47,96 @@ Join our Discord ➔</a></h3>
 GitHub repo ➔</a></h3>
 
 
-<br><br><br>
+	<h2 id="known_issues">Known issues</h2>
+	
+	<ul>
+		<li>Moving too far will interrupt the game with a system pop-up.
+			<ul><li>You can disable 'physical space features' in
+			system Settings > Advanced > Enable Custom Developer Settings 
+			> Physical space features.</ul>
+		<li>Headsets must be on the same network and subnet to connect.
+			<ul><li>Enterprise networks may put devices on different subnets
+			and prevent connection.
+			<li>You can use a phone or Windows PC hotspot 
+			if your network isn't working.</ul>
+		<li>Meta's shared anchors are finicky and often fail.
+		<li>Players' virtual avatars will drift and dislocate
+		from their real bodies over time.
+		<li>Playspace map syncing will occasionally cause crashes.
+		<li>Depth-lights are unoptimized.
+		<li>Distant lasers and avatars are invisible due to limited depth-occlusion
+		range.
+		<li>The playspace mapper will add other players' bodies to the heightmap.
+	</ul>
 
-
-<h2>About</h2>
-<p>This is a portfolio site for some friends making stuff together.
+<h2>People</h2>
 <ul>
 	<li>Neto.blaster - concept artist
 	
-	<li><a href="https://fizzyapple12.com/" target="_blank">
-	FizzyApple12 ➔</a> programmer and graphic designer
-		
 	<li><a href="https://trev3d.com/" target="_blank">
 	trev3d ➔</a> programmer and artist
+	
+	<li><a href="https://fizzyapple12.com/" target="_blank">
+	FizzyApple12 ➔</a> programmer and graphic designer
 </ul>
+
+<h3>Special thanks</h3>
+	
+	<ul>
+		
+		<li><a href="https://strikervr.com/" target="_blank">
+		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
+		for integration. Also helped test the game. Check them out!!!
+
+	</ul>
+	
+		<h3>Playtesters</h3>
+	
+	<ul>
+		<li><a href="https://www.matthewstanciu.com" target="_blank">
+		Matthew Stanciu ➔</a>
+		
+		<li><a href="https://www.jackhogan.me" target="_blank">
+		Jack Hogan ➔</a>
+		
+		<li><a href="https://www.artstation.com/ratlz" target="_blank">
+		Blake Edwards ➔</a>
+		
+		<li><a href="https://discord.com/invite/Emxq4dBj8G" target="_blank">
+		MelancholySeabiscuit ➔</a>
+		
+		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
+		William Yang ➔</a>
+		
+		<li><a href="https://alanocull.com" target="_blank">
+		Alan O'Cull ➔</a>
+		
+		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
+		George Takahashi ➔</a> 
+		
+		<li>fleech
+		
+		<li><a href="https://www.codehusky.com" target="_blank">
+		Loki ➔</a>
+		
+		<li><a href="https://hellfire.tv" target="_blank">
+		Ben B. ➔</a>
+		
+		<li><a href="https://www.instagram.com/studio.maverick/" target="_blank">
+		StudioMaverick ➔</a>
+		
+		<li><a href="https://www.purduehackers.com" target="_blank">
+		Purdue Hackers ➔</a> and its members. Super helpful with
+		playstesting and a great place to hang out. 
+		
+				
+		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
+		Nico Uthe ➔</a> and 
+		<a href="https://www.freeroam.ar/" target="_blank">
+		freeroam.ar ➔</a>.
+		They have their own mixed reality laser tag game too. Check it out!!!
+	</ul>
+
 
 </main>
 
