--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://discord.com/invite/Emxq4dBj8G" target="_blank">
 		MelancholySeabiscuit ➔</a>
 		
+		<li><a href="https://x.com/strakacher21" target="_blank">
+		strakecher21 ➔</a>
+		
 		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
 		William Yang ➔</a>
 		
