fix strakacher's name

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ GitHub repo ➔</a></h3>
 		MelancholySeabiscuit ➔</a>
 		
 		<li><a href="https://x.com/strakacher21" target="_blank">
-		strakecher21 ➔</a>
+		strakacher21 ➔</a>
 		
 		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
 		William Yang ➔</a>
