update special thanks

--- a/index.html
+++ b/index.html
@@ -88,11 +88,6 @@ GitHub repo ➔</a></h3>
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
 		for integration. Also helped test the game. Check them out!!!
 
-	</ul>
-	
-		<h3>Playtesters</h3>
-	
-	<ul>
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
 		
@@ -114,8 +109,8 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
 		
-		<li><a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">
-		George Takahashi ➔</a> 
+		<li>
+		George Takahashi
 		
 		<li>fleech
 		
