--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ There are also many bugs.
 
 <p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
 
+<p>Be sure to read the in-game manual!
+
 <h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
 Try the beta ➔</a></h2>
 
@@ -45,29 +47,6 @@ Try the beta ➔</a></h2>
 Join our Discord ➔</a></h3>
 <p><h3><a href="https://github.com/anaglyphs/lasertag" target="_blank">
 GitHub repo ➔</a></h3>
-
-
-	<h2 id="known_issues">Known issues</h2>
-	
-	<ul>
-		<li>Moving too far will interrupt the game with a system pop-up.
-			<ul><li>You can disable 'physical space features' in
-			system Settings > Advanced > Enable Custom Developer Settings 
-			> Physical space features.</ul>
-		<li>Headsets must be on the same network and subnet to connect.
-			<ul><li>Enterprise networks may put devices on different subnets
-			and prevent connection.
-			<li>You can use a phone or Windows PC hotspot 
-			if your network isn't working.</ul>
-		<li>Meta's shared anchors are finicky and often fail.
-		<li>Players' virtual avatars will drift and dislocate
-		from their real bodies over time.
-		<li>Playspace map syncing will occasionally cause crashes.
-		<li>Depth-lights are unoptimized.
-		<li>Distant lasers and avatars are invisible due to limited depth-occlusion
-		range.
-		<li>The playspace mapper will add other players' bodies to the heightmap.
-	</ul>
 
 <h2>People</h2>
 <ul>
@@ -123,6 +102,9 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://www.instagram.com/studio.maverick/" target="_blank">
 		StudioMaverick ➔</a>
 		
+		<li><a href="https://www.instagram.com/iceseatheott/">
+		IceSea ➔</a>
+				
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers ➔</a> and its members. Super helpful with
 		playstesting and a great place to hang out. 
