add link to george

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://strikervr.com/" target="_blank">
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
 		for integration. Also helped test the game. Check them out!!!
+		
+		<li><a href="https://x.com/strakacher21" target="_blank">
+		strakacher21 ➔</a>
+		
+		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
+		Nico Uthe ➔</a> and 
+		<a href="https://www.freeroam.ar/" target="_blank">
+		freeroam.ar ➔</a>.
+		They have their own mixed reality laser tag game too. Check it out!!!
 
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
@@ -79,17 +88,14 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://discord.com/invite/Emxq4dBj8G" target="_blank">
 		MelancholySeabiscuit ➔</a>
 		
-		<li><a href="https://x.com/strakacher21" target="_blank">
-		strakacher21 ➔</a>
-		
 		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
 		William Yang ➔</a>
 		
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
 		
-		<li>
-		George Takahashi
+		<li><a href="https://www.linkedin.com/in/george-takahashi/">
+		George Takahashi ➔</a>
 		
 		<li>fleech
 		
@@ -108,13 +114,6 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers ➔</a> and its members. Super helpful with
 		playstesting and a great place to hang out. 
-		
-				
-		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
-		Nico Uthe ➔</a> and 
-		<a href="https://www.freeroam.ar/" target="_blank">
-		freeroam.ar ➔</a>.
-		They have their own mixed reality laser tag game too. Check it out!!!
 	</ul>
 
 
