--- a/index.html
+++ b/index.html
@@ -67,14 +67,17 @@ GitHub repo ➔</a></h3>
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
 		for integration. Also helped test the game. Check them out!!!
 		
-		<li><a href="https://x.com/strakacher21" target="_blank">
-		strakacher21 ➔</a>
-		
 		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
 		Nico Uthe ➔</a> and 
 		<a href="https://www.freeroam.ar/" target="_blank">
 		freeroam.ar ➔</a>.
 		They have their own mixed reality laser tag game too. Check it out!!!
+		
+		<li><a href="https://www.linkedin.com/in/george-takahashi/" target="_blank">
+		George Takahashi ➔</a>
+		
+		<li><a href="https://x.com/strakacher21" target="_blank">
+		strakacher21 ➔</a>
 
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
@@ -94,9 +97,6 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
 		
-		<li><a href="https://www.linkedin.com/in/george-takahashi/">
-		George Takahashi ➔</a>
-		
 		<li>fleech
 		
 		<li><a href="https://www.codehusky.com" target="_blank">
@@ -108,7 +108,7 @@ GitHub repo ➔</a></h3>
 		<li><a href="https://www.instagram.com/studio.maverick/" target="_blank">
 		StudioMaverick ➔</a>
 		
-		<li><a href="https://www.instagram.com/iceseatheott/">
+		<li><a href="https://www.instagram.com/iceseatheott/" target="_blank">
 		IceSea ➔</a>
 				
 		<li><a href="https://www.purduehackers.com" target="_blank">
