unhide title and fix fonts

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <main>
 
 
-<!-- <div title> -->
-		<!-- <img class="logo" src="anaglyph.png" style="width:100px;"> -->
+<div title>
+		<img class="logo" src="anaglyph.png" style="width:100px;">
 
-	<!-- <div style="display:inline-block;"> -->
-		<!-- <h1 style="margin:0;">Anaglyph</h1> -->
-	<!-- </div> -->
-<!-- </div> -->
+	<div style="display:inline-block;">
+		<h1 style="margin:0;">anaglyph</h1>
+	</div>
+</div>
 
 <div class="webvid" style="aspect-ratio:16:9;">
 	<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
@@ -65,7 +65,7 @@ GitHub repo ➔</a></h3>
 		
 		<li><a href="https://strikervr.com/" target="_blank">
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
-		for integration. Also helped test the game. Check them out!!!
+		to us. Check them out!!!
 		
 		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
 		Nico Uthe ➔</a> and 
@@ -113,7 +113,7 @@ GitHub repo ➔</a></h3>
 				
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers ➔</a> and its members. Super helpful with
-		playstesting and a great place to hang out. 
+		playstesting and a great place to hang out :)
 	</ul>
 
 
