--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <main>
 
 
-<div title>
+<header>
 		<img class="logo" src="anaglyph.png" style="width:100px;">
 
 	<div style="display:inline-block;">
 		<h1 style="margin:0;">anaglyph</h1>
 	</div>
-</div>
+</header>
 
 <div class="webvid" style="aspect-ratio:16:9;">
 	<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
@@ -27,40 +27,54 @@
 	style = "height:100%;"allowfullscreen></iframe>
 </div>
 
-<h2>We're currently making <i>Lasertag</i></h2>
+<section>
 
-<p><b>Lasertag</b> (one word) turns any space into a laser tag arena 
-with a few Meta Quests and the press of a button. 
-It's an experimental multiplayer mixed-reality FPS that 'just works.'
+	<h2>We're currently making <i>Lasertag</i></h2>
 
-<p>Right now we're focusing on core features, so the game is pretty bare bones. 
-There are also many bugs.
+	<p><b>Lasertag</b> (one word) turns any space into a laser tag arena 
+	with a few Meta Quests and the press of a button. 
+	Our goal is to make something that 'just works.'
 
-<p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
+</section>
 
-<p>Be sure to read the in-game manual!
+<section>
 
-<h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-Try the beta ➔</a></h2>
-
-<p><h3><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
-Join our Discord ➔</a></h3>
-<p><h3><a href="https://github.com/anaglyphs/lasertag" target="_blank">
-GitHub repo ➔</a></h3>
-
-<h2>People</h2>
-<ul>
-	<li>Neto.blaster - concept artist
+	<p><h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
+	Try the beta ➔</a></h2>
+	<p><h3><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
+	Join our Discord ➔</a></h3>
+	<p><h3><a href="https://github.com/anaglyphs/lasertag" target="_blank">
+	GitHub repo ➔</a></h3>
 	
-	<li><a href="https://trev3d.com/" target="_blank">
-	trev3d ➔</a> programmer and artist
+	<br>
 	
-	<li><a href="https://fizzyapple12.com/" target="_blank">
-	FizzyApple12 ➔</a> programmer and graphic designer
-</ul>
+	<p>Right now we're focusing on core features, so the game is pretty bare bones. 
+	There are also many bugs.
 
-<h3>Special thanks</h3>
-	
+	<p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
+
+	<p>Be sure to read the in-game manual!
+
+</section>
+
+<section>
+
+	<h2>People</h2>
+	<ul>
+		<li>Neto.blaster - concept artist
+		
+		<li><a href="https://trev3d.com/" target="_blank">
+		trev3d ➔</a> programmer and artist
+		
+		<li><a href="https://fizzyapple12.com/" target="_blank">
+		FizzyApple12 ➔</a> programmer and graphic designer
+	</ul>
+
+</section>
+
+<section>
+
+	<h2>Special thanks</h2>
 	<ul>
 		
 		<li><a href="https://strikervr.com/" target="_blank">
@@ -116,6 +130,7 @@ GitHub repo ➔</a></h3>
 		playstesting and a great place to hang out :)
 	</ul>
 
+</section>
 
 </main>
 
