--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="webvid" style="aspect-ratio:16:9;">
 	<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-	allow="autoplay; fullscreen; picture-in-picture" 
+	allow="autoplay; fullscreen; picture-in-picture"
 	style = "height:100%;"allowfullscreen></iframe>
 </div>
 
@@ -31,29 +31,36 @@
 
 	<h2>We're currently making <i>Lasertag</i></h2>
 
-	<p><b>Lasertag</b> (one word) turns any space into a laser tag arena 
-	with a few Meta Quests and the press of a button. 
-	Our goal is to make something that 'just works.'
+	<p><b>Lasertag</b> (one word) is a mixed reality game that
+	turns any space into a laser tag arena
+	for you and your friends.
+
+	<p>The game scans your room in real time so virtual bullets
+	collide with real-world walls.
+	Headsets connect to each other automatically,
+	making setup super easy.</p>
 
 </section>
 
 <section>
 
-	<p><h2><a href="https://www.meta.com/s/59aIPXxXi" target="_blank">
-	Try the beta ➔</a></h2>
-	<p><h3><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
-	Join our Discord ➔</a></h3>
-	<p><h3><a href="https://github.com/anaglyphs/lasertag" target="_blank">
-	GitHub repo ➔</a></h3>
-	
+	<p class="major"><a href="https://www.meta.com/experiences/lasertag/25121192657495694/" target="_blank">
+	Get the game! ➔</a></p>
+
+	<p class="minor"><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
+	Join our Discord ➔</a></p>
+
+	<p class="minor"><a href="https://github.com/anaglyphs/lasertag" target="_blank">
+	GitHub repo ➔</a></p>
+
 	<br>
-	
-	<p>Right now we're focusing on core features, so the game is pretty bare bones. 
-	There are also many bugs.
+
+	<p>Right now we're focusing on core features, so the game is pretty bare bones.
+	There are also plenty of bugs—we’re working on it!
 
 	<p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
 
-	<p>Be sure to read the in-game manual!
+	<p>The in-game manual has more tips for setup and gameplay.
 
 </section>
 
@@ -61,13 +68,13 @@
 
 	<h2>People</h2>
 	<ul>
-		<li>Neto.blaster - concept artist
-		
+		<li>Ernesto Tangassi Lucio - concept artist
+
 		<li><a href="https://trev3d.com/" target="_blank">
-		trev3d ➔</a> programmer and artist
-		
+		Julian Triveri ➔</a> - programmer and artist
+
 		<li><a href="https://fizzyapple12.com/" target="_blank">
-		FizzyApple12 ➔</a> programmer and graphic designer
+		FizzyApple12 ➔</a> - programmer and graphic designer
 	</ul>
 
 </section>
@@ -76,58 +83,70 @@
 
 	<h2>Special thanks</h2>
 	<ul>
-		
+
 		<li><a href="https://strikervr.com/" target="_blank">
 		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
 		to us. Check them out!!!
-		
+
 		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
-		Nico Uthe ➔</a> and 
+		Nico Uthe ➔</a> and
 		<a href="https://www.freeroam.ar/" target="_blank">
 		freeroam.ar ➔</a>.
 		They have their own mixed reality laser tag game too. Check it out!!!
-		
+
 		<li><a href="https://www.linkedin.com/in/george-takahashi/" target="_blank">
 		George Takahashi ➔</a>
-		
+
+		<li><a href="https://x.com/Aidan_Wolf" target="_blank">
+		Aidan Wolf ➔</a>
+
+		<li><a href="https://mikameel.framer.website" target="_blank">
+		Mika Haak ➔</a>
+
+		<li><a href="https://x.com/allan_yde" target="_blank">
+		Allan Yde ➔</a>
+
+		<li><a href="https://x.com/kevando_" target="_blank">
+		Kevin Habich ➔</a>
+
 		<li><a href="https://x.com/strakacher21" target="_blank">
 		strakacher21 ➔</a>
 
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
-		
+
 		<li><a href="https://www.jackhogan.me" target="_blank">
 		Jack Hogan ➔</a>
-		
+
 		<li><a href="https://www.artstation.com/ratlz" target="_blank">
 		Blake Edwards ➔</a>
-		
+
 		<li><a href="https://discord.com/invite/Emxq4dBj8G" target="_blank">
 		MelancholySeabiscuit ➔</a>
-		
+
 		<li><a href="https://www.artstation.com/uninspirational" target="_blank">
 		William Yang ➔</a>
-		
+
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
-		
+
 		<li>fleech
-		
+
 		<li><a href="https://www.codehusky.com" target="_blank">
 		Loki ➔</a>
-		
+
 		<li><a href="https://hellfire.tv" target="_blank">
 		Ben B. ➔</a>
-		
+
 		<li><a href="https://www.instagram.com/studio.maverick/" target="_blank">
 		StudioMaverick ➔</a>
-		
+
 		<li><a href="https://www.instagram.com/iceseatheott/" target="_blank">
 		IceSea ➔</a>
-				
+
 		<li><a href="https://www.purduehackers.com" target="_blank">
 		Purdue Hackers ➔</a> and its members. Super helpful with
-		playstesting and a great place to hang out :)
+		playtesting and a great place to hang out :)
 	</ul>
 
 </section>
