--- a/lasertag/howtoplay.html
+++ b/lasertag/howtoplay.html
@@ -14,23 +14,28 @@
 
 <h1>How to Play</h1>
 
-<p>Lasertag is a work-in-progress game, so it's pretty bare bones.
+<p>Lasertag is still in early development,
+	so the experience is fairly minimal for now.
 
 <p><b>We recommend only playing on Quest 3 and 3s.</b>
-Quest 2 and Pro headsets lack essential spatial understanding features. 
-<b>There is no need to scan your space before playing!</b>
+Quest 2 and Quest Pro don't support room scanning during
+gameplay and can't properly occlude virtual objects
+behind real-world obstacles. This gives older headset users
+a huge advantage unless you're playing in an open space using only
+virtual walls for cover.
 
 <p>To start a game, make sure all of your headsets are on the same WiFi network.
-Then, have one person press the 'host game' button. Other headsets in proximity
+Then, have one person press the 'host game' button. Other nearby headsets
 should connect automatically. School and office networks may not work.
 
-<p>Once everyone connects, you can start shooting at each other! 
-<b>Only headshots count!!!</b>
+<p>Once everyone connects, you can start shooting at each other!
+<b>Only headshots count!</b>
 
-<p>There's an objects menu where you can place team bases, capture points,
-walls, and select your gun. Once you place red and blue bases you can state a team
-deathmatch that lasts 3 minutes. Future updates will flesh out the match system with
-options and other gamemodes.
+<p>Use the Objects Menu to place team bases, capture points, and walls,
+or to select your weapon. After placing both red and blue bases,
+you can start a team deathmatch that lasts 3 minutes.
+Future updates will expand the match system with more
+game modes, customization options, and weapons.
 
 </main>
 
