--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<h2>People</h2>
 	<ul>
-		<li>Ernesto Tangassi Lucio - concept artist
+		<li>neto.blaster - concept artist
 
 		<li><a href="https://trev3d.com/" target="_blank">
 		Julian Triveri ➔</a> - programmer and artist
