--- a/lasertag/troubleshooting.html
+++ b/lasertag/troubleshooting.html
@@ -22,11 +22,14 @@ Meta Quest headsets also have a few quirks that can occasionally cause problems.
 	Meta headsets have a habit of disconnecting from networks when asleep
 	or switching to other known networks in the same space.
 
-	<p><b>Some WiFi networks won't work.</b>
-	Office and school networks often stop devices
-	from talking to each other.
-	You may be able to use a phone or Windows PC hotspot,
-	but these have limited range.
+	<p><b>Some WiFi networks just aren't compatible.</b>
+	Office and school networks commonly block devices
+	from communicating with each other.
+	If your headsets aren’t connecting on the same network,
+	try enabling the <b>Relay</b> option in the in-game hosting settings.
+	This routes connections through an online server
+	instead of connecting headsets directly,
+	though it may add some latency.
 </details>
 
 <details>
