--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<br>
 
 	<p>Right now we're focusing on core features, so the game is pretty bare bones.
-	There are also plenty of bugs—we’re working on it!
+	There are also plenty of bugs. We’re working on it!
 
 	<p>We recommend playing on Quest 3 or 3s, as older headsets lack features important to the game.
 
