--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
 
 <main>
 
+<section class="center-width">
+	<header>
+			<img class="logo" src="anaglyph.png" style="width:100px;">
 
-<header>
-		<img class="logo" src="anaglyph.png" style="width:100px;">
+		<div style="display:inline-block;">
+			<h1 style="margin:0;">anaglyph</h1>
+		</div>
+	</header>
 
-	<div style="display:inline-block;">
-		<h1 style="margin:0;">anaglyph</h1>
+	<div class="webvid" style="aspect-ratio:16:9;">
+		<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
+		allow="autoplay; fullscreen; picture-in-picture"
+		style = "height:100%;"allowfullscreen></iframe>
 	</div>
-</header>
+</section>
 
-<div class="webvid" style="aspect-ratio:16:9;">
-	<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
-	allow="autoplay; fullscreen; picture-in-picture"
-	style = "height:100%;"allowfullscreen></iframe>
-</div>
-
-<section>
+<section class="center-width">
 
 	<h2>We're currently making <i>Lasertag</i></h2>
 
@@ -42,7 +43,7 @@
 
 </section>
 
-<section>
+<section class="center-width">
 
 	<p class="major"><a href="https://www.meta.com/experiences/lasertag/25121192657495694/" target="_blank">
 	Get the game! ➔</a></p>
@@ -65,6 +66,23 @@
 </section>
 
 <section>
+	<h2 class="center-width">Screenshots</h2>
+	<br>
+	<div class="carousel" dir="ltr"
+	onclick="event.srcElement.scrollIntoView({behavior: 'smooth', block: 'nearest', inline: 'center'});">
+		<img src="lasertag/screenshots/armory1.png" />
+		<img src="lasertag/screenshots/sfpark.png" />
+		<img src="lasertag/screenshots/armory2.png" />
+		<img src="lasertag/screenshots/bechtel1.png" />
+		<img src="lasertag/screenshots/bechtel2.png" />
+		<img src="lasertag/screenshots/bechtel3.png" />
+		<img src="lasertag/screenshots/bechtel4.png" />
+		<img src="lasertag/screenshots/bechtel6.png" />
+		<img src="lasertag/screenshots/fwa3.png" />
+	</ul>
+</section>
+
+<section class="center-width">
 
 	<h2>People</h2>
 	<ul>
@@ -79,7 +97,7 @@
 
 </section>
 
-<section>
+<section class="center-width">
 
 	<h2>Special thanks</h2>
 	<ul>
