--- a/privacy.html
+++ b/privacy.html
@@ -13,22 +13,26 @@
 <main>
 
 <h1>Privacy Policy for Lasertag</h1>
-<h3>tl;dr, we don't collect any information. Meta does.</h3>
+<h3>tl;dr, we don't collect any information. Meta & Unity do.</h3>
 <br>
 <p>Lasertag does not collect or transmit any personal information (or any information at all)
-to anyone except for 
+to anyone except for
 <a href="https://www.facebook.com/privacy/policy" target=_"blank">
-Meta</a> and any people you're playing with on your local network. 
-All Meta Quest apps must typically share some information (such as your User ID)
-with Meta.</p>
+Meta</a>,
+<a href="https://unity.com/legal/game-player-and-app-user-privacy-policy" target="_blank">
+Unity</a>,
+and any people you're playing with.
+All Meta Quest apps must typically share some information (such as your User/Device ID, IP address, etc.)
+with Meta and Unity.</p>
 
 <p>The multiplayer networking takes place on your local network
-and doesn't interface with any third party servers 
+and doesn't interface with any third party servers
 except for Meta's.</p>
 
-<p>When you join a multiplayer game, your Meta User ID is shared with other players
-and with Meta for colocation functionality. It is not kept by other players or by anyone else
-but Meta after the game session ends.</p>
+<p>When you join a multiplayer game, your Meta User ID, Device ID, and IP address
+are shared with other players, with Meta for colocation functionality,
+and with Unity for multiplayer connection functionality.
+We do not transmit any data to anybody else.</p>
 
 <p>Information about your physical space (point cloud information and more)
 is collected and managed by Meta for colocation functionality.
