--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <main>
 
-<section class="center-width">
-	<header>
+<section>
+	<header class="center-width">
 			<img class="logo" src="anaglyph.png" style="width:100px;">
 
 		<div style="display:inline-block;">
