--- a/lasertag/troubleshooting.html
+++ b/lasertag/troubleshooting.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<main>
+<main class="center-width">
 
 <h1>Troubleshooting</h1>
 <p>Lasertag is a work-in-progress game, so some rough edges are expected.
