--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<main>
+<main class="center-width">
 
 <h1>Privacy Policy for Lasertag</h1>
 <h3>tl;dr, we don't collect any information. Meta & Unity do.</h3>
