--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
 		allow="autoplay; fullscreen; picture-in-picture"
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
-</section>
 
-<section class="center-width">
+	<div class="center-width">
+		<h2>We're currently making <i>Lasertag</i></h2>
 
-	<h2>We're currently making <i>Lasertag</i></h2>
+		<p><b>Lasertag</b> (one word) is a mixed reality game that
+		turns any space into a laser tag arena
+		for you and your friends.
 
-	<p><b>Lasertag</b> (one word) is a mixed reality game that
-	turns any space into a laser tag arena
-	for you and your friends.
-
-	<p>The game scans your room in real time so virtual bullets
-	collide with real-world walls.
-	Headsets connect to each other automatically,
-	making setup super easy.</p>
-
+		<p>The game scans your room in real time so virtual bullets
+		collide with real-world walls.
+		Headsets connect to each other automatically,
+		making setup super easy.</p>
+	</div>
 </section>
 
 <section class="center-width">
@@ -100,41 +98,32 @@
 <section class="center-width">
 
 	<h2>Special thanks</h2>
+	<p>In no particular order!</p>
 	<ul>
+		<li><a href="https://envision.center">
+		Purdue University Envision Center ➔
+		</a></li>
 
 		<li><a href="https://strikervr.com/" target="_blank">
-		StrikerVR ➔</a> gifted two of their Mavrik haptic blasters
-		to us. Check them out!!!
+		StrikerVR ➔</a>
 
-		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
-		Nico Uthe ➔</a> and
-		<a href="https://www.freeroam.ar/" target="_blank">
-		freeroam.ar ➔</a>.
-		They have their own mixed reality laser tag game too. Check it out!!!
+		<li><a href="https://visitdreampark.com">
+		DreamPark ➔
+		</a></li>
+
+		<li><a href="https://www.purduehackers.com" target="_blank">
+		Purdue Hackers ➔</a></li>
+
+		<li><a href="https://www.freeroam.ar/" target="_blank">
+		freeroam.ar ➔</a></li>
+
+		<br>
 
 		<li><a href="https://www.linkedin.com/in/george-takahashi/" target="_blank">
 		George Takahashi ➔</a>
 
-		<li><a href="https://x.com/Aidan_Wolf" target="_blank">
-		Aidan Wolf ➔</a>
-
-		<li><a href="https://mikameel.framer.website" target="_blank">
-		Mika Haak ➔</a>
-
-		<li><a href="https://x.com/allan_yde" target="_blank">
-		Allan Yde ➔</a>
-
-		<li><a href="https://x.com/kevando_" target="_blank">
-		Kevin Habich ➔</a>
-
-		<li><a href="https://x.com/strakacher21" target="_blank">
-		strakacher21 ➔</a>
-
 		<li><a href="https://www.matthewstanciu.com" target="_blank">
 		Matthew Stanciu ➔</a>
-
-		<li><a href="https://www.jackhogan.me" target="_blank">
-		Jack Hogan ➔</a>
 
 		<li><a href="https://www.artstation.com/ratlz" target="_blank">
 		Blake Edwards ➔</a>
@@ -148,11 +137,6 @@
 		<li><a href="https://alanocull.com" target="_blank">
 		Alan O'Cull ➔</a>
 
-		<li>fleech
-
-		<li><a href="https://www.codehusky.com" target="_blank">
-		Loki ➔</a>
-
 		<li><a href="https://hellfire.tv" target="_blank">
 		Ben B. ➔</a>
 
@@ -162,9 +146,38 @@
 		<li><a href="https://www.instagram.com/iceseatheott/" target="_blank">
 		IceSea ➔</a>
 
-		<li><a href="https://www.purduehackers.com" target="_blank">
-		Purdue Hackers ➔</a> and its members. Super helpful with
-		playtesting and a great place to hang out :)
+		<li><a href="https://www.linkedin.com/in/andres-uzcategui-a5699a200">
+		Andres Uzcategui ➔
+		</a></li>
+
+		<li><a href="https://ieeexplore.ieee.org/author/970114994151628">
+		Alex Sinelli ➔</a></li>
+
+		<li><a href="https://www.jackhogan.me" target="_blank">
+		Jack Hogan ➔</a>
+
+		<li><a href="https://x.com/strakacher21" target="_blank">
+		strakacher21 ➔</a>
+
+		<li>fleech
+
+		<li><a href="https://www.codehusky.com" target="_blank">
+		Loki ➔</a>
+
+		<li><a href="https://x.com/Aidan_Wolf" target="_blank">
+		Aidan Wolf ➔</a>
+
+		<li><a href="https://mikameel.framer.website" target="_blank">
+		Mika Haak ➔</a>
+
+		<li><a href="https://x.com/allan_yde" target="_blank">
+		Allan Yde ➔</a>
+
+		<li><a href="https://x.com/kevando_" target="_blank">
+		Kevin Habich ➔</a>
+
+		<li><a href="https://www.linkedin.com/in/nico-uthe-961818aa/" target="_blank">
+		Nico Uthe ➔</a>
 	</ul>
 
 </section>
